// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generateICalendarObject should generate a full iCalendar object with a timed event 1`] = `
[
  {
    "attach": null,
    "attendees": [],
    "description": "Timed Test Event",
    "interval": null,
    "relatesTo": null,
    "repeat": null,
    "summary": "Timed Test Event",
    "trigger": 900,
    "type": "display",
    "x": [],
  },
  {
    "attach": null,
    "attendees": [
      {
        "delegatedFrom": null,
        "delegatedTo": null,
        "email": "email1@example.com",
        "mailto": null,
        "name": null,
        "role": "NON-PARTICIPANT",
        "rsvp": null,
        "scheduleAgent": null,
        "sentBy": null,
        "status": null,
        "type": null,
        "x": [],
      },
      {
        "delegatedFrom": null,
        "delegatedTo": null,
        "email": "email2@example.com",
        "mailto": null,
        "name": null,
        "role": "NON-PARTICIPANT",
        "rsvp": null,
        "scheduleAgent": null,
        "sentBy": null,
        "status": null,
        "type": null,
        "x": [],
      },
    ],
    "description": "Sample one time timed event description",
    "interval": null,
    "relatesTo": null,
    "repeat": null,
    "summary": "Timed Test Event",
    "trigger": 86400,
    "type": "email",
    "x": [],
  },
]
`;

exports[`generateICalendarObject should generate a full iCalendar object with an all day event 1`] = `
[
  {
    "attach": null,
    "attendees": [],
    "description": "All-Day Test Event",
    "interval": null,
    "relatesTo": null,
    "repeat": null,
    "summary": "All-Day Test Event",
    "trigger": 900,
    "type": "display",
    "x": [],
  },
  {
    "attach": null,
    "attendees": [
      {
        "delegatedFrom": null,
        "delegatedTo": null,
        "email": "email1@example.com",
        "mailto": null,
        "name": null,
        "role": "NON-PARTICIPANT",
        "rsvp": null,
        "scheduleAgent": null,
        "sentBy": null,
        "status": null,
        "type": null,
        "x": [],
      },
      {
        "delegatedFrom": null,
        "delegatedTo": null,
        "email": "email2@example.com",
        "mailto": null,
        "name": null,
        "role": "NON-PARTICIPANT",
        "rsvp": null,
        "scheduleAgent": null,
        "sentBy": null,
        "status": null,
        "type": null,
        "x": [],
      },
    ],
    "description": "Sample one time all day event description",
    "interval": null,
    "relatesTo": null,
    "repeat": null,
    "summary": "All-Day Test Event",
    "trigger": 86400,
    "type": "email",
    "x": [],
  },
]
`;
